	  and SAM4S boards (2013-6-12).
	* Standardize on CONFIG_NSH_BUILTIN_APPS.  Remove all other variants
	  of the build-as-an-NSH-application configuration settings
	  (2013-6-12).
	* arch/arm/src/sam34/sam_periphclks.h:  A header file that just
	  includes the right header file.  This cleans up the messy logic
	  in all of the C files and puts the mess in one place (2013-6-12).
	* arch/arm/src/arm*/Toolchain.mk, Kconfig (and lots of configuration
	  files):  Add support for a generic Windows EABI toolchain (2013-6-13).

6.29 2013-xx-xx Gregory Nutt <gnutt@nuttx.org>

	* arch/arm/src/sam34/chip/sam4l_pinmap.h: Change naming of some pin
	  configurations to match names used with other SAM part (2013-6-15).
	* arch/arm/src/sam34/sam4l_clockconfig.c: Corrected some typos
	  (2013-6-15).
	* configs/sam4l-xplained/src/sam_buttons.c: Eliminate a warning
	  (2013-6-15).
	* configs/sam4l-xplained/src/sam_mmcsd.c, sam_nsh.c, sam_spi.c,
	  sam3u-ek.h, Kconfig, Makefile, sam4l-xplained.h,
	  configs/sam4l-xplained/README.txt, and
	  configs/sam4l-xplained/include/board.h:  Add support for the SPI-
	  based SD card on the I/O1 module (2013-6-15).
	* arch/arm/src/sam34/sam_spi.c:  Re-architect the SAM3/4 SPI driver
	  so that is it compatible with the SPI drivers of other MCUs
	  (2013-6-16).
	* configs/sam3u-ek/src/up_touchscreen.c and configs/sam4l-xplained/src/sam_mmcsd.c:
	  Changed needed because of the above change the the SAM3/4 SPI
	  interface (2013-6-16).
	* drivers/input/ads7843e.c:  Remove the wait for the touchscreen busy
	  bit.  I don't see the busy bit changing on the SAM3U-EK board.  But
	  maybe it is not supposed to.  From my reading of the ADS7843 spec, it
	  would not be appropriate to wait for the BUSY bit to de-asserted
	  anyway (since it is only de-asserted when we read the data)
	  (2013-6-16).
	* configs/sam3u-ek/src/up_touchscreen.c: Fix polarity of the /PENIRQ
	  signal (it is active low) (2013-6-16).
