@@ -193,7 +193,7 @@ CONFIG_ARCH_HAVE_RAMVECTORS=y
 #
 # Board Settings
 #
-CONFIG_BOARD_LOOPSPERMSEC=4768
+CONFIG_BOARD_LOOPSPERMSEC=8720
 # CONFIG_ARCH_CALIBRATION is not set
 CONFIG_DRAM_START=0x20000000
 CONFIG_DRAM_SIZE=32768
