@@ -4992,4 +4992,6 @@
 	  (2013-6-16).
 	* configs/sam3u-ek/src/up_touchscreen.c: Fix polarity of the /PENIRQ
 	  signal (it is active low) (2013-6-16).
+	* configs/sam3u-ek/include/board.h:  The SAM3U-EK board now runs at
+	  96MHz.  This might have broken some things? (2013-6-17).
 
